Fixed 'i' on mobile

--- a/Idea1/css/idea1.css
+++ b/Idea1/css/idea1.css
@@ -1111,6 +1111,15 @@ footer a:hover {
     .video-wrapper {
         margin-top: 60px;
     }
+
+    .bg-i {
+        background: url(../img/i.png) no-repeat 0px 9px;
+        background-size: 13px;
+    }
+    .bg-i-small {
+        background: url(../img/i.png) no-repeat 0px;
+        background-size: 9px;
+    }
 }
 @media (max-width: 480px) {
     #agency {
